# unison-fsmonitor

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  default.nix  shell.nix  unison-fsmonitor
.github/workflows/: CD.yml  CI-CD.yml  CI.yml  build-and-test.yml  release.yml
src/: main.rs
