[package]
name = "unison-fsmonitor"
description = "unison-fsmonitor implementation"
version = "0.2.3"
authors = ["Junfeng Li <autozimu@gmail.com>"]
license = "MIT"
edition = "2018"

[package.metadata.release]
no-dev-version = true

[dependencies]
percent-encoding = "1"
failure = { version = "0", default-features = false, features = ["std"] }
notify = "4"
log = "0"
env_logger = "0"

[profile.release]
debug = true
