[package]
name = "unison-fsmonitor"
description = "unison-fsmonitor implementation"
homepage = "https://github.com/autozimu/unison-fsmonitor"
version = "0.2.3"
authors = ["Junfeng Li <autozimu@gmail.com>"]
license = "MIT"
edition = "2021"

[package.metadata.release]
dev-version = false

[dependencies]
percent-encoding = "2"
failure = { version = "0", default-features = false, features = ["std"] }
notify = "4"
log = "0"
env_logger = "0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
debug = true
