[package]
name = "unison-fsmonitor"
description = "unison-fsmonitor implementation"
repository = "https://github.com/autozimu/unison-fsmonitor"
version = "0.3.8"
authors = ["Junfeng Li <autozimu@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
percent-encoding = "2"
failure = { version = "0", default-features = false, features = ["std"] }
notify = "4"
log = "0.4"
env_logger = "0.9"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
debug = true
